# WebCodeTool

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION.md  README.md  demo_fix.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh  test_fix.sh  test_with_results.py
config/: .env.example
demos/: demo_no_api.py  demo_persistence.py
docs/: CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  FAQ.md  FIX_RECURSIVE_DECOMPOSITION_LOOP.md  FIX_STATUS.md  INDEX.md  PERSISTENCE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_COMPLETE.md  README_MAIN.md  testowanie.md
examples/: client_example.py  streaming_example.py
results/task_0002/: detailed_report.json  hierarchy.json  output.txt  report.txt  stats.json
results/task_0003/: detailed_report.json  hierarchy.json  output.txt  report.txt  stats.json
results/task_0004/: detailed_report.json  hierarchy.json  output.txt  report.txt  stats.json
scripts/: main.py  quick_test.py  test_run.py
src/cad_ai/: __init__.py  agents.py  persistence.py  results_viewer.py  task_manager.py
tests/: __init__.py  test_decomposition_fix.py  test_duplication.py  test_intelligent.py  test_main.py  test_registry.py  test_tools.py
tools/: setup.py
web/: README.md  copilot_requirements  package-lock.json  package.json  server.js  tailwind.config.js  test.html
web/backend/: app.py  app_new.py
web/public/: index.html  styles.css  test-editor.html
webcodetool/: __init__.py  __main__.py  config.py  main.py
webcodetool/agent/: __init__.py  controller.py  models.py
(+29 files in other folders)
